--- a/views/about.pug
+++ b/views/about.pug
@@ -34,8 +34,8 @@ block content
         ul
           li walderdorff.luis@gmail.com
 
-        a.button.expanded(href='https://www.linkedin.com/in/luis-walderdorff-564650163/') LinkedIn
-        a.button.expanded(href='https://github.com/luiswalderdorff') GitHub
+        a.button.expanded(href='https://www.linkedin.com/in/luis-walderdorff-564650163/' target="_blank") LinkedIn
+        a.button.expanded(href='https://github.com/luiswalderdorff' target="_blank") GitHub
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
